[package]
name = "debugger"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
async-process = "2.2.3"
futures = "0.3"
anyhow = "1.0.57"
smol = "1.2"
parking_lot = "0.12.1"
postage = { version = "0.5", features = ["futures-traits"] }
gpui = { git = "https://github.com/zed-industries/zed" }
